--- a/templates/page.product.liquid
+++ b/templates/page.product.liquid
@@ -1,3 +1,15 @@
-<div>
-    Hello World!
-</div>
+<section>
+  <div>
+    <img height="100" width="100" src="#">
+  </div>
+
+  <div>
+    <img height="100" width="100" src="https://drone-anatomy-bucket.s3.amazonaws.com/static/core/img/agri/spray-banner.png">
+  </div>
+  <div>
+    <img height="100" width="100" src="#">
+  </div>
+  <div>
+    <img height="100" width="100" src="#">
+  </div>
+</section>
