--- a/templates/page.product.liquid
+++ b/templates/page.product.liquid
@@ -1,1 +1,7 @@
 {% section 'product-banner' %}
+
+{% section 'product-banner' %}
+
+{% section 'product-banner' %}
+
+{% section 'product-banner' %}
