--- a/templates/page.product.liquid
+++ b/templates/page.product.liquid
@@ -1,7 +1,7 @@
 {% section 'product-banner' %}
 
-{% section 'product-banner' %}
+{% section 'video-banner' %}
 
 {% section 'product-banner' %}
 
-{% section 'product-banner' %}
+{% section 'video-banner' %}
