--- a/sections/video-banner.liquid
+++ b/sections/video-banner.liquid
@@ -104,6 +104,19 @@
     color: white;
   }
 
+  .video-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+
+  .video-container video {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
   .video-bg {
     position: absolute;
     width: 100%;
