--- a/sections/video-banner.liquid
+++ b/sections/video-banner.liquid
@@ -104,11 +104,11 @@
     color: white;
   }
 
-  .video-container {
+  {% comment %} .video-container {
     position: relative;
     width: 100%;
     height: 100%;
-  }
+  } {% endcomment %}
 
   .video-container video {
     position: absolute;
