--- a/sections/video-banner.liquid
+++ b/sections/video-banner.liquid
@@ -112,6 +112,8 @@
 
   .video-container video {
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
