--- a/templates/page.product.liquid
+++ b/templates/page.product.liquid
@@ -1,7 +1,19 @@
-{% section 'product-banner' %}
+{% layout 'page' %}
 
-{% section 'video-banner' %}
+<div class="product-detail-page">
+  <!-- Image Banner -->
+  <div class="image-banner">
+    <img src="{{ 'your-image-banner.jpg' | asset_url }}" alt="Image Banner" style="width: 100%; height: auto;">
+  </div>
 
-{% section 'product-banner' %}
+  <!-- Video Banner -->
+  <div class="video-banner" style="text-align: center; margin: 20px 0;">
+    <iframe width="100%" height="500" src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen></iframe>
+  </div>
 
-{% section 'video-banner' %}
+  <!-- Additional Content -->
+  <div class="content">
+    <h1>Product Details</h1>
+    <p>Here you can add more details about the product.</p>
+  </div>
+</div>
