--- a/templates/page.liquid
+++ b/templates/page.liquid
@@ -1,4 +1,4 @@
-<article class="page py-10">
+<section class="page py-10">
   <div class="container">
     <h1 class="title mb-4">
       {{ page.title }}
