--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -1,4 +1,4 @@
-<div class="image-banner" style="text-align: center; margin: 20px 0;">
+<div id="image-banner-{{ section.id }}" class="image-banner" style="text-align: center; margin: 20px 0;">
     <img src="{{ section.settings.image | asset_url }}" alt="{{ section.settings.alt_text }}" style="width: 100%; height: auto;">
   </div>
   
