--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -181,8 +181,10 @@
     }
   
     .image-banner-content {
-      position: relative;
+      position: absolute;
       z-index: 2;
+      top: 10px;
+      left: 12px;
       max-width: 80%;
       padding: 0 20px;
     }
