--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -109,7 +109,7 @@
           { "value": "text-body", "label": "Body" },
           { "value": "text-white", "label": "White" }
         ],
-        "default": "center"
+        "default": "text-primary"
       },
       {
         "type": "header",
