--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -17,8 +17,8 @@
       opacity: {{ section.settings.overlay_opacity | divided_by: 100.0 }};
     "></div>
   
-    <div class="image-banner-content" style="text-align: {{ section.settings.text_alignment }};">
-      <h2 class="image-banner-subtitle" style="color: {{ section.settings.text_color }}">{{ section.settings.subtitle }}</h2>
+    <div class="image-banner-content {{ section.settings.text_color }}" style="text-align: {{ section.settings.text_alignment }};">
+      <h2 class="image-banner-subtitle">{{ section.settings.subtitle }}</h2>
       <h1 class="image-banner-title" style="color: {{ section.settings.text_color }}">{{ section.settings.title }}</h1>
       <p class="image-banner-description"  style="color: {{ section.settings.text_color }}">{{ section.settings.description }}</p>
       
