--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -130,7 +130,7 @@
           { "value": "text-body", "label": "Body" },
           { "value": "text-white", "label": "White" }
         ],
-        "default": "center"
+        "default": "text-body"
       }
     ],
     "presets": [
