--- a/sections/video-banner.liquid
+++ b/sections/video-banner.liquid
@@ -139,10 +139,10 @@
   }
 
   .overlay {
-    position: absolute;
+    {% comment %} position: absolute;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.5); {% endcomment %}
   }
 
   .video-banner-content {
