--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -198,7 +198,8 @@
     }
   
     .image-banner-content {
-      position: relative;
+      position: absolute;
+      top:20%;
       z-index: 2;
       max-width: 80%;
       padding: 0 20px;
