--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -224,7 +224,7 @@
   
     @media screen and (max-width: 768px) {
       .image-banner {
-        height: 500px;
+        {% comment %} height: 500px; {% endcomment %}
       }
   
       .banner-image--desktop {
